# Cardiac-Ablation-ECM2

./: .gitignore  CHANGELOG  CMakeLists.txt
miniapps/celldeath-ecm2/: CMakeLists.txt
miniapps/celldeath-ecm2/lib/: ThreeStateCellDeath.cpp  ThreeStateCellDeath.h  celldeath_solver.cpp  celldeath_solver.hpp  celldeath_solver_gotran.cpp  celldeath_solver_gotran.hpp
miniapps/celldeath-ecm2/tests/: test_celldeath.cpp  test_square.cpp  test_transfer.cpp
miniapps/common-ecm2/: CMakeLists.txt  FilesystemHelper.hpp  MeshUtils.cpp  anisotropy_utils.hpp  check_mesh.cpp  common_utils.cpp  common_utils.hpp  custom_coefficients.hpp  extract-mesh-ids.cpp  interface_transfer.cpp  interface_transfer.hpp  mesh-utils.cpp  utils.cpp  utils.hpp
miniapps/common-ecm2/tests/: transfer2d.cpp  transfer3d.cpp
miniapps/electrophysiology-ecm2/: CMakeLists.txt  ionic_models.cpp  ionic_models.hpp  ionic_models_mfem.cpp  ionic_models_mfem.hpp  ode_model.hpp  test_bidomain.cpp  utils.cpp
miniapps/electrophysiology-ecm2/bc/: ep_bchandler.cpp  ep_bchandler.hpp
miniapps/electrophysiology-ecm2/ionic_models/: README.md  fenton_karma_1998.h  gotranx_wrapper.hpp  mitchell_schaeffer_2003.h  mitchell_schaeffer_2003_td_dependent.h
miniapps/electrophysiology-ecm2/lib/: implicit_solver.cpp  implicit_solver.hpp  monodomain_solver.cpp  monodomain_solver.hpp  reaction_solver.cpp  reaction_solver.hpp
miniapps/electrophysiology-ecm2/tests/: test_amr.cpp  test_constant_temperature.cpp  test_monodomain.cpp  test_monodomain_autodetect.cpp  test_niederer_benchmark.cpp  test_stimulation.cpp  test_thermal_coupling.cpp  test_thermal_damage_coupling.cpp
miniapps/electrostatics-ecm2/: CMakeLists.txt
miniapps/electrostatics-ecm2/bc/: electrostatics_bchandler.cpp  electrostatics_bchandler.hpp
miniapps/electrostatics-ecm2/lib/: CMakeLists.txt  electromagnetics.hpp  electrostatics_solver.cpp  electrostatics_solver.hpp
miniapps/electrostatics-ecm2/tests/: convergence_2D.cpp  electrostatics_test2D.cpp  electrostatics_test3D.cpp  electrostatics_test3D_aniso_rotated.cpp  electrostatics_test3D_anisotropic.cpp  electrostatics_test3D_anisotropic_rotated.cpp  electrostatics_test_power_control.cpp  electrostatics_wellposedness.cpp  mms_2D.cpp  test_spaces.cpp
miniapps/heat-ecm2/: CMakeLists.txt
miniapps/heat-ecm2/bc/: heat_bchandler.cpp  heat_bchandler.hpp
miniapps/heat-ecm2/lib/: CMakeLists.txt  heat_coefficients.hpp  heat_operator.cpp  heat_operator.hpp  heat_solver.cpp  heat_solver.hpp  implicit_solver.cpp  implicit_solver.hpp
miniapps/heat-ecm2/tests/: convergence.cpp  heat_test.cpp  heat_test_3Daniso.cpp  heat_test_temperature_dependence.cpp  heat_test_temperature_dependence_old.cpp  heat_test_volumetric_terms.cpp
miniapps/mechanics-ecm2/: CMakeLists.txt  materials.hpp
miniapps/mechanics-ecm2/definitions/: materials.hpp
miniapps/mechanics-ecm2/operators/: elasticity_jacobian_operator.cpp  elasticity_jacobian_operator.hpp  elasticity_operator.cpp  elasticity_operator.hpp  elasticity_utils.hpp
miniapps/mechanics-ecm2/preconditioners/: elasticity_jacobian_preconditioner.cpp  elasticity_jacobian_preconditioner.hpp
miniapps/mechanics-ecm2/solvers/: quasi_static_elasticity_solver.cpp  quasi_static_elasticity_solver.hpp
miniapps/mechanics-ecm2/tests/: test_beam.cpp
miniapps/multidomain-ecm2/: CMakeLists.txt  contexts.hpp  multidomain-dirichlet.cpp  multidomain-mfem.cpp  multidomain-neumann-dirichlet-cylinder.cpp  multidomain-neumann-dirichlet-heat-source.cpp  multidomain-neumann-dirichlet.cpp  multidomain-one-domain-celldeath-rf-aniso.cpp  multidomain-three-domains-celldeath-rf-navier.cpp  multidomain-three-domains-celldeath-rf.cpp  multidomain-three-domains-celldeath.cpp  multidomain-three-domains-rf.cpp  multidomain-three-domains.cpp  multidomain-two-domains-rf.cpp  multidomain.cpp  test-grad-transfer.cpp  test-nonoverlapping-partition.cpp  test-transfer-two-domains-overlapping-partition.cpp
miniapps/multidomain-ecm2/dirichlet-neumann/: CMakeLists.txt  contexts.hpp  multidomain-dirichlet.cpp  multidomain-one-domain-celldeath-rf-aniso.cpp  multidomain-three-domains-celldeath-rf-navier.cpp  multidomain-three-domains-celldeath-rf.cpp  multidomain-three-domains-celldeath.cpp  multidomain-two-domains-rf.cpp  test-nonoverlapping-partition.cpp
miniapps/multidomain-ecm2/general/: CMakeLists.txt  test-transfer-2d.cpp  test-transfer-two-domains-overlapping-partition.cpp
miniapps/multidomain-ecm2/osm/: CMakeLists.txt  contexts.hpp  multidomain-three-domains-celldeath-rf-navier.cpp  multidomain-two-domains-rf.cpp
miniapps/multidomain-ecm2/osm-2d/: CMakeLists.txt  multidomain-two-domains-rf.cpp
miniapps/navier-ecm2/: CMakeLists.txt
miniapps/navier-ecm2-rk-imex/: CMakeLists.txt
miniapps/navier-ecm2-rk-imex/bc/: navierstokes_bchandler.cpp  navierstokes_bchandler.hpp
miniapps/navier-ecm2-rk-imex/integrators/: custom_bilinteg.cpp  custom_bilinteg.hpp
miniapps/navier-ecm2-rk-imex/lib/: CMakeLists.txt  navier_unsteady_solver.cpp  navier_unsteady_solver.hpp  navierstokes_operator.cpp  navierstokes_operator.hpp  navierstokes_preconditioners.cpp  navierstokes_preconditioners.hpp  navierstokes_residual.cpp  navierstokes_residual.hpp  navierstokes_srk.cpp  navierstokes_srk.hpp
miniapps/navier-ecm2-rk-imex/tests/: navier_mms.cpp
miniapps/navier-ecm2/Mesh/: BenchmarkFDA2D.msh
miniapps/navier-ecm2/integrators/: custom_integrators.cpp  custom_integrators.hpp  vectorconvection_bilinteg.cpp  vectorconvection_bilinteg.hpp
miniapps/navier-ecm2/lib/: navier_preconditioners.cpp  navier_preconditioners.hpp  navier_solver.cpp  navier_solver.hpp
miniapps/navier-ecm2/tests/: navier_backstep.cpp  navier_flowaroundcyl.cpp  navier_liddriven.cpp  navier_mms.cpp  navier_poiseulle.cpp
miniapps/navier-monolithic-ecm2/: CMakeLists.txt
miniapps/navier-monolithic-ecm2/Mesh/: stented-channel.msh
miniapps/navier-monolithic-ecm2/bc/: navier_bchandler.cpp  navier_bchandler.hpp
miniapps/navier-monolithic-ecm2/integrators/: custom_bilinear_integrators.cpp  custom_bilinear_integrators.hpp  custom_integrators.cpp  (+2 more)
(+114 files in other folders)
